tried to fix clipping

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
     background-image: url("images/Minecraft-Survival-Guide-Featured.webp");
     background-size: cover;
     filter: blur(5px);
+    background-clip: content-box;
     background-position: center;
     height: 100%;
     width: 100%;
